osk: Destroy the keyboard (releasing any modifieres) before restart, re-use shift-key style classes (for now), fix modifier persistence between layers.

--- a/data/theme/cinnamon-sass/widgets/_keyboard.scss
+++ b/data/theme/cinnamon-sass/widgets/_keyboard.scss
@@ -44,17 +44,19 @@ $shifted_key_color: $lightest_bg_color;
   &.shift-key-uppercase { background-color: $shifted_key_color }
   &.enter-key { background-color: $accent_bg_color }
 
-  &.modifier-key {
-    background-color: $non_alpha_key_color;
+  // TODO: pseudo class latched works better for temporarily changing the color.
 
-    &:focus { @include button(focus); }
-    &:hover, &:checked { @include button(hover); }
-    &:active { @include button(active); }
+  // &.modifier-key {
+  //   background-color: $non_alpha_key_color;
 
-    &:latched {
-      background-color: $shifted_key_color;
-    }
-  }
+  //   &:focus { @include button(focus); }
+  //   &:hover, &:checked { @include button(hover); }
+  //   &:active { @include button(active); }
+
+  //   &:latched {
+  //     background-color: $shifted_key_color;
+  //   }
+  // }
 
   StIcon { icon-size: 1.125em; }
 }
